syntax = "proto3";

package proto;

import "google/api/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "grpc/models/structures.proto";

option go_package = "grpc/lead-grpc;proto";

service LeadService{
    rpc GetLead (GetLeadRequest) returns (GetLeadResponse){
        option (google.api.http) = {
            get: "/v1/lead/{id}"
        };
    }
    rpc GetLeads (GetLeadsRequest) returns (GetLeadsResponse){
        option (google.api.http) = {
            get: "/v1/lead"
        };
    }
    rpc DeleteLead (DeleteLeadRequest) returns (DeleteLeadResponse){
        option (google.api.http) = {
            delete: "/v1/lead/{id}"
        };
    }
    rpc NewLead (NewLeadRequest) returns (NewLeadResponse){
        option (google.api.http) = {
            post: "/v1/lead"
        };
    }
    rpc PutLead (PutLeadRequest) returns (PutLeadResponse){
        option (google.api.http) = {
            put: "/v1/lead/{id}"
            body: "lead"
        };
    }
}

message GetLeadRequest{
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
}

message GetLeadResponse{
    uint32 id = 1;
    models.Lead lead = 2;
    google.protobuf.Timestamp createdAt = 3;
    google.protobuf.Timestamp updatedAt = 4;
}

message GetLeadsRequest{
    google.protobuf.Empty empty = 1;
}

message GetLeadsResponse{
    repeated models.Lead leads = 1;
}

message NewLeadRequest{
    models.Lead lead = 1;
}

message NewLeadResponse{
    models.Lead lead = 1;
    google.protobuf.Timestamp createdAt = 2;
}

message PutLeadRequest{
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
    models.Lead lead = 2;
}

message PutLeadResponse{
    models.Lead lead = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
}

message DeleteLeadRequest{
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
}

message DeleteLeadResponse{
    string message = 1;
}