syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "grpc/models/structures.proto";

option go_package = "grpc/lead-grpc;proto";

service LeadProductService{
    rpc AddProductsToLead (AddProductsToLeadRequest) returns (AddProductsToLeadResponse){
        option (google.api.http) = {
            post: "/v1/lead-product"
            body: "*"
        };
    }
    rpc GetLeadProducts (GetLeadProductsRequest) returns (GetLeadProductsResponse){
        option (google.api.http) = {
            get: "/v1/lead-product/{id}"
        };
    }
    rpc GetLeadsProducts (GetLeadsProductsRequest) returns (GetLeadsProductsResponse){
        option (google.api.http) = {
            get: "/v1/lead-product"
        };
    }
    rpc DeleteLeadProducts (DeleteLeadProductsRequest) returns (DeleteLeadProductsResponse){
        option (google.api.http) = {
            delete: "/v1/lead-product/{id}"
        };
    }
    rpc PutProductsLead (PutProductsLeadRequest) returns (PutProductsLeadResponse){
        option (google.api.http) = {
            put: "/v1/lead-product/{id}"
            body: "product"
        };
    }
}

message AddProductsToLeadRequest{
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
    repeated string product_ids = 2;
}

message AddProductsToLeadResponse{
    string message = 1;
}

message GetLeadProductsRequest{
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
}

message GetLeadProductsResponse{
    repeated models.ResponseItem product = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
}

message GetLeadsProductsRequest{
    google.protobuf.Empty empty = 1;
}

message GetLeadsProductsResponse{
    repeated models.ResponseItem products = 1;
}

message PutProductsLeadRequest{
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
    models.Product product = 2;
}

message PutProductsLeadResponse{
    string message = 1;
}

message DeleteLeadProductsRequest{
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
}

message DeleteLeadProductsResponse{
    string message = 1;
}
