syntax = "proto3";

package models;

option go_package = "github.com/fiveret/api-gateway/grpc/models; models";

message LeadResponse{
    uint32 id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string company = 5;
    repeated ItemResponse products = 6;
    uint32 visits = 7;
    string lastVisit = 8;
    double totalSales = 9;
    uint32 lastPurchaseDays = 10;
}

message LeadRequest{
    string name = 1;
    string email = 2;
    string phone = 3;
    string company = 4;
    repeated ItemResponse products = 5;
    uint32 visits = 6;
    string lastVisit = 7;
    double totalSales = 8;
    uint32 lastPurchaseDays = 9;
}

message ItemResponse{
    uint32 product_id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string category = 5;
    string currency = 6;
    uint32 inStock = 7;
    string status = 8;
}


message ItemRequest{
    string name = 1;
    string description = 2;
    double price = 3;
    string category = 4;
    string currency = 5;
    uint32 inStock = 6;
    string status = 7;
}